--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">PasswordRecorder</string>
+    <string name="username">Username:</string>
+    <string name="enterUsername">Put your username here</string>
+    <string name="password">Password:</string>
+    <string name="enterPassword">Put your password here</string>
+    <string name="login">login</string>
+    <string name="register">register</string>
+    <string name="birth">birthday</string>
+    <string name="birthDay">enter your birthday here</string>
+    <string name="error1">Please enter info</string>
 </resources>
