--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -9,5 +9,12 @@
     <string name="register">注册</string>
     <string name="birth">生日</string>
     <string name="birthDay">输入生日</string>
-    <string name="error1">Please enter info</string>
+    <string name="addPassword">添加账户信息</string>
+    <string name="checkInfo">查看已存储的信息</string>
+    <string name="error1">信息不能为空</string>
+    <string name="error2">用户名已存在</string>
+    <string name="error3">用户名或密码错误</string>
+    <string name="success1">注册成功! 去登录</string>
+    <string name="success2">登录成功</string>
+    <string name="info1">欢迎回来 </string>
 </resources>
