--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,10 +11,23 @@
     <string name="birthDay">输入生日</string>
     <string name="addPassword">添加账户信息</string>
     <string name="checkInfo">查看已存储的信息</string>
+    <string name="registerInfo">注册地</string>
     <string name="error1">信息不能为空</string>
     <string name="error2">用户名已存在</string>
     <string name="error3">用户名或密码错误</string>
     <string name="success1">注册成功! 去登录</string>
     <string name="success2">登录成功</string>
     <string name="info1">欢迎回来 </string>
+    <string-array name="website">
+        <item>Google</item>
+        <item>Facebook</item>
+        <item>Outlook</item>
+        <item>Amazon</item>
+        <item>QQ</item>
+        <item>163mail</item>
+        <item>wechat</item>
+        <item>blizzard</item>
+        <item>Steam</item>
+        <item>other</item>
+    </string-array>
 </resources>
