--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,23 @@
     <string name="addPassword">click to add password</string>
     <string name="checkInfo">click here to check info</string>
     <string name="registerInfo">Which website you register the account</string>
+    <string name="securityPhone">The security phone number you submit on website</string>
+    <string name="enterSecurity">Enter phone number here</string>
+    <string name="addBtn">Add it</string>
     <string name="error1">Please enter info</string>
     <string name="error2">Exist username, change it.</string>
     <string name="error3">Wrong info</string>
     <string name="success1">Register complete! Go to Login</string>
     <string name="success2">Login successfully</string>
     <string name="info1">Welcome back </string>
+    <string name="info2">The info you enter is:</string>
+    <string name="infoUser">Username:</string>
+    <string name="infoPwd">Password:</string>
+    <string name="infoWeb">Website:</string>
+    <string name="infoSecurity">Security phone</string>
+    <string name="yesBtn">Yes</string>
+    <string name="noBtn">no</string>
+    <string name="BackToFront">Click here back to front</string>
     <string-array name="website">
         <item>Google</item>
         <item>Facebook</item>
