when website is other,user can input it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="infoUser">Username:</string>
     <string name="infoPwd">Password:</string>
     <string name="infoWeb">Website:</string>
-    <string name="infoSecurity">Security phone</string>
+    <string name="infoSecurity">Security phone:</string>
     <string name="yesBtn">Yes</string>
     <string name="noBtn">no</string>
     <string name="BackToFront">Click here back to front</string>
