--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="success2">登录成功</string>
     <string name="info1">欢迎回来 </string>
     <string name="info2">The info you enter is:</string>
+    <string name="exit1">再按一次退出</string>
     <string name="infoUser">Username:</string>
     <string name="infoPwd">Password:</string>
     <string name="infoWeb">Website:</string>
