--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,6 +18,7 @@
     <string name="error1">信息不能为空</string>
     <string name="error2">用户名已存在</string>
     <string name="error3">用户名或密码错误</string>
+    <string name="error4">无信息，请添加</string>
     <string name="success1">注册成功! 去登录</string>
     <string name="success2">登录成功</string>
     <string name="info1">欢迎回来 </string>
@@ -32,6 +33,7 @@
     <string name="noBtn">否</string>
     <string name="BackToFront">返回首页</string>
     <string name="back">返回登录页面</string>
+    <string name="returnToLogin">返回首页</string>
     <string-array name="website">
         <item>Google</item>
         <item>Facebook</item>
