--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,15 +15,20 @@
     <string name="securityPhone">输入注册时的手机号</string>
     <string name="enterSecurity">再此输入手机号</string>
     <string name="addBtn">添加</string>
+    <string name="checkBtn">检查信息</string>
+    <string name="changeBtn">修改密码</string>
     <string name="error1">信息不能为空</string>
     <string name="error2">用户名已存在</string>
     <string name="error3">用户名或密码错误</string>
     <string name="error4">无信息，请添加</string>
+    <string name="error5">用户名错误</string>
     <string name="success1">注册成功! 去登录</string>
     <string name="success2">登录成功</string>
+    <string name="success3">修改成功! 去登录</string>
     <string name="info1">欢迎回来 </string>
     <string name="info2">你输入的信息为:</string>
     <string name="info3">确认删除?</string>
+    <string name="info4">检查成功</string>
     <string name="exit1">再按一次退出</string>
     <string name="infoUser">用户名:</string>
     <string name="infoPwd">密码:</string>
@@ -31,9 +36,11 @@
     <string name="infoSecurity">安全手机:</string>
     <string name="yesBtn">是</string>
     <string name="noBtn">否</string>
+    <string name="sureBtn">确认</string>
     <string name="BackToFront">返回首页</string>
     <string name="back">返回登录页面</string>
     <string name="returnToLogin">返回首页</string>
+    <string name="findPass">忘记密码</string>
     <string-array name="website">
         <item>Google</item>
         <item>Facebook</item>
