--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="birthDay">enter your birthday here</string>
     <string name="addPassword">click to add password</string>
     <string name="checkInfo">click here to check info</string>
+    <string name="edit">click here to edit info</string>
+    <string name="editHint">Go to edit by long click the info</string>
     <string name="registerInfo">Which website you register the account</string>
     <string name="securityPhone">The security phone number you submit on website</string>
     <string name="enterSecurity">Enter phone number here</string>
@@ -30,6 +32,7 @@
     <string name="info2">The info you enter is:</string>
     <string name="info3">Are you sure you want to delete this?</string>
     <string name="info4">Check Successed</string>
+    <string name="info5">Are you sure you want to edit this?</string>
     <string name="exit1">Press another back to exit</string>
     <string name="infoUser">Username:</string>
     <string name="infoPwd">Password:</string>
