--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,7 +15,7 @@
     <string name="editHint">通过长按信息去编辑</string>
     <string name="registerInfo">注册地</string>
     <string name="securityPhone">输入注册时的手机号</string>
-    <string name="enterSecurity">再此输入手机号</string>
+    <string name="enterSecurity">在此输入手机号</string>
     <string name="addBtn">添加</string>
     <string name="checkBtn">检查信息</string>
     <string name="changeBtn">修改密码</string>
@@ -48,6 +48,8 @@
     <string name="findPass">忘记密码</string>
     <string name="aboutUs">关于</string>
     <string name="popAbout">这个程序是由 Kylinlee\u00A9 制作的 \n 100%开源且免费 \n 你可以通过下面的按钮查看源代码 \n或者通过给26882137@qq.com反馈问题</string>
+    <string name="secCode">验证码:</string>
+    <string name="secCodeHint">在此输入验证码</string>
     <string-array name="website">
         <item>Google</item>
         <item>Facebook</item>
