--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,7 +17,7 @@
     <string name="securityPhone">输入注册时的手机号</string>
     <string name="enterSecurity">在此输入手机号</string>
     <string name="addBtn">添加</string>
-    <string name="checkBtn">检查信息</string>
+    <string name="checkBtn">检查用户名是否存在</string>
     <string name="changeBtn">修改密码</string>
     <string name="checkInGuthub">在github中查看代码</string>
     <string name="reportBtn">反馈问题</string>
@@ -26,6 +26,8 @@
     <string name="error3">用户名或密码错误</string>
     <string name="error4">无信息，请添加</string>
     <string name="error5">用户名错误</string>
+    <string name="error6">验证码错误</string>
+    <string name="error7">旧密码不能与新密码相同</string>
     <string name="success1">注册成功! 去登录</string>
     <string name="success2">登录成功</string>
     <string name="success3">修改成功! 去登录</string>
