--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="changeBtn">Change password</string>
     <string name="checkInGuthub">Go to github</string>
     <string name="reportBtn">report a bug</string>
+    <string name="backupBtn">Click here to backup</string>
+    <string name="restoreBtn">click here to restore</string>
+    <string name="restoreHint">File must exist in root directory</string>
     <string name="error1">Please enter info</string>
     <string name="error2">Exist username, change it.</string>
     <string name="error3">Wrong info</string>
@@ -30,6 +33,7 @@
     <string name="success1">Register complete! Go to Login</string>
     <string name="success2">Login successfully</string>
     <string name="success3">Change success! Go to Login</string>
+    <string name="success4">Backup succeed, it\'s in:</string>
     <string name="info1">Welcome back </string>
     <string name="info2">The info you enter is:</string>
     <string name="info3">Are you sure you want to delete this?</string>
@@ -66,6 +70,7 @@
         <item>wechat</item>
         <item>blizzard</item>
         <item>Steam</item>
+        <item>Netease</item>
         <item>other</item>
     </string-array>
     <string-array name="numberCode">
