--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,6 +27,7 @@
     <string name="searchBtn">搜索信息</string>
     <string name="searchBy">用什么搜索:</string>
     <string name="searchHint">在此输入</string>
+    <string name="passwordHint">密码必须为8–16位，含有字母数字或者(@!#)</string>
     <string name="error1">信息不能为空</string>
     <string name="error2">用户名已存在</string>
     <string name="error3">用户名或密码错误</string>
@@ -35,6 +36,7 @@
     <string name="error6">验证码错误</string>
     <string name="error7">旧密码不能与新密码相同</string>
     <string name="error8">没有找到备份文件</string>
+    <string name="error9">密码必须为8–16位</string>
     <string name="success1">注册成功! 去登录</string>
     <string name="success2">登录成功</string>
     <string name="success3">修改成功! 去登录</string>
@@ -50,6 +52,7 @@
     <string name="info9">你有: </string>
     <string name="info10">条信息在数据库中</string>
     <string name="info11">恢复成功，去登录</string>
+    <string name="info12">长按信息来删除</string>
     <string name="exit1">再按一次退出</string>
     <string name="infoUser">用户名:</string>
     <string name="infoPwd">密码:</string>
@@ -61,7 +64,7 @@
     <string name="sureBtn">确认</string>
     <string name="BackToFront">返回首页</string>
     <string name="back">返回登录页面</string>
-    <string name="returnToLogin">返回首页</string>
+    <string name="returnToLogin">登出</string>
     <string name="findPass">忘记密码</string>
     <string name="aboutUs">关于</string>
     <string name="popAbout">这个程序是由 Kylinlee\u00A9 制作的 \n 100%开源且免费 \n 你可以通过下面的按钮查看源代码 \n或者通过给26882137@qq.com反馈问题</string>
