--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -28,6 +28,7 @@
     <string name="searchBy">用什么搜索:</string>
     <string name="searchHint">在此输入</string>
     <string name="passwordHint">密码必须为8–16位，含有字母数字或者(@!#)</string>
+    <string name="rememberPassword">记住用户名密码</string>
     <string name="error1">信息不能为空</string>
     <string name="error2">用户名已存在</string>
     <string name="error3">用户名或密码错误</string>
