--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -55,7 +55,7 @@
     <string name="info9">你有: </string>
     <string name="info10">条信息在数据库中</string>
     <string name="info11">恢复成功，去登录</string>
-    <string name="info12">长按信息来删除</string>
+    <string name="info12">短按查看复制，长按信息来删除</string>
     <string name="info13">发现备份！备份时间为: </string>
     <string name="info14">你没有保存，确定返回？</string>
     <string name="info15">系统语言更改，应用自动重启</string>
@@ -69,17 +69,19 @@
     <string name="yesBtn">是</string>
     <string name="noBtn">否</string>
     <string name="sureBtn">确认</string>
+    <string name="copyBtn">复制用户名和密码到剪贴板</string>
     <string name="BackToFront">返回首页</string>
     <string name="back">返回登录页面</string>
     <string name="returnToLogin">登出</string>
     <string name="findPass">忘记密码</string>
     <string name="aboutUs">关于</string>
-    <string name="popAbout">这个程序是由 Kylinlee\u00A9 制作的 \n 100%开源且免费 \n 你可以通过下面的按钮查看源代码 \n或者通过给26882137@qq.com反馈问题</string>
+    <string name="popAbout">这个程序是由 Kylinlee\u00A9 制作的 \n 100%开源且免费 \n 你可以通过下面的按钮查看源代码 \n或者通过在github上添加问题反馈</string>
     <string name="secCode">验证码:</string>
     <string name="secCodeHint">在此输入验证码</string>
     <string name="secSwitch">账号需要安全手机</string>
     <string name="otherInfoSwitch">账号需要其他信息</string>
     <string name="otherInfoHint">在此输入其他信息</string>
+    <string name="userInfoHint">用户名信息如下</string>
     <string-array name="website">
         <item>Google</item>
         <item>Facebook</item>
